--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -54,8 +54,8 @@ greenCity.pages.table.habit.id=ID\u0020\u0417\u0432\u0438\u0447\u043A\u0438
 greenCity.pages.table.actions=\u0414\u0456\u0457
 greenCity.pages.table.content=\u0417\u043c\u0456\u0441\u0442
 greenCity.pages.table.translations=\u041f\u0435\u0440\u0435\u043a\u043b\u0430\u0434\u0438
-greenCity.pages.table.translation.id=\u0049\u0044\u041f\u0435\u0440\u0435\u043a\u043b\u0430\u0434\u0443
-greenCity.pages.table.language.code=\u041a\u043e\u0434\u041c\u043e\u0432\u0438
+greenCity.pages.table.translation.id=\u0049\u0044\u0020\u043F\u0435\u0440\u0435\u043A\u043B\u0430\u0434\u0443
+greenCity.pages.table.language.code=\u041A\u043E\u0434\u0020\u043C\u043E\u0432\u0438
 greenCity.pages.table.language.id=\u0049\u0044\u0020\u004d\u043e\u0432\u0438
 greenCity.pages.table.days=\u00D0\u00B4\u00D0\u00BD\u00D1\u0096\u00D0\u00B2
 greenCity.pages.table.hide=\u00D1\u0081\u00D1\u0085\u00D0\u00BE\u00D0\u00B2\u00D0\u00B0\u00D1\u0082\u00D0\u00B8
@@ -240,6 +240,13 @@ greenCity.social.page.h=\u041A\u0435\u0440\u0443\u0432\u0430\u043D\u043D\u044F\u
 greenCity.social.page.add.social=\u0414\u043E\u0434\u0430\u0442\u0438\u0020\u0417\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u043D\u044F
 greenCity.social.page.edit.social=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438\u0020C\u043E\u0446\u0456\u0430\u043B\u044C\u043D\u0456\u0020\u041D\u043E\u0432\u0438\u043D\u0438
 greenCity.social.page.delete.social=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438\u0020\u0417\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u043D\u044F\u0020\u0421\u043E\u0446\u0456\u0430\u043B\u044C\u043D\u043E\u0457\u0020\u041C\u0435\u0440\u0435\u0436\u0456
+
+/*factsoftheday*/
+greenCity.factsOfTheDay.page.h=\u041A\u0435\u0440\u0443\u0432\u0430\u043D\u043D\u044F\u0020\u0444\u0430\u043A\u0442\u0430\u043C\u0438\u0020\u0434\u043D\u044F
+greenCity.factsOfTheDay.page.add.factsOfTheDay=\u0414\u043E\u0434\u0430\u0442\u0438\u0020\u043D\u043E\u0432\u0438\u0439\u0020\u0444\u0430\u043A\u0442\u0020\u0434\u043D\u044F
+greenCity.factsOfTheDay.page.edit.factsOfTheDay=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438\u0020\u0444\u0430\u043A\u0442\u0020\u0434\u043D\u044F
+greenCity.factsOfTheDay.page.delete.factsOfTheDay=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438\u0020\u0444\u0430\u043A\u0442\u0020\u0434\u043D\u044F
+greenCity.factsOfTheDay.page.name=\u041D\u0430\u0437\u0432\u0430\u0020\u0444\u0430\u043A\u0442\u0443\u0020\u0434\u043D\u044F
 
 /*goalpage*/
 greenCity.shoppingListItem.page.h=\u041A\u0435\u0440\u0443\u0432\u0430\u043D\u043D\u044F\u0020\u0441\u043F\u0438\u0441\u043A\u043E\u043C\u0020\u043F\u043E\u043A\u0443\u043F\u043E\u043A
